--- a/ui/modules/apps/BeamMP-Session/app.html
+++ b/ui/modules/apps/BeamMP-Session/app.html
@@ -7,6 +7,7 @@
 	#quit-button {
 		width: 55px;
 		height: 100%;
+		border: 2px solid rgba(175, 175, 175, 0.45);
 	}
 	.outerDiv {
 		display: flex;
