--- a/ui/modules/apps/BeamMP-PlayerList/app.html
+++ b/ui/modules/apps/BeamMP-PlayerList/app.html
@@ -1,20 +1,26 @@
-<div ng-controller="PlayerList" id="PlayerList" class="multiplayerPlayerList" ng-init="init()" ng-style="{'background-color': 'rgba(0, 0, 0, 0)'}">
+<div ng-controller="PlayerList" id="PlayerList" class="multiplayerPlayerList" ng-init="init()" ng-style="{'background-color': 'rgba(0, 0, 0, 0)', 'height': '100%'}">
 	<style>
-		.popout-list {
+		#main-container {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-end;
+			align-content: flex-end;
+			height: 100%;
+		}
+		#plist-container {
 			display: none;
-			margin-right: 25px;
-			background-color: rgba(0, 0, 0, 0.25);
-			width:100%;
-			resize:both;
-			border: 2px solid rgba(175, 175, 175, 0.45);
+			transition: 0.20s;
+			width: 100%;
+			margin: 0;
+			padding: 0;
 		}
 		#show-button {
 			font-weight: bold;
 			width: 25px;
-			height: 80px;
-			position: absolute;
-			right: 0;
+			height: 75px;
 			border: 2px solid rgba(175, 175, 175, 0.45);
+			padding: 0;
+			margin: 0;
 		}
 		.tp-button {
 			width: 50px;
@@ -26,15 +32,21 @@
 			border-collapse: collapse;
 			width: 100%;
 			padding-bottom: -4px;
+			background-color: rgba(0, 0, 0, 0.25);
+			border: 2px solid rgba(175, 175, 175, 0.45);
 		}
 		#players-table td {
 			padding: 0 0 0 5px;
+			max-width: 100%;
+			max-width: 0;
+			overflow: hidden;
 		}
 		#players-table th {
 			border-bottom: 2px solid rgba(175, 175, 175, 0.45);
+			margin: 0;
+			padding: 0;
 		}
 		.buttons {
-			background-color:black;
 			color: #DDDDDD;
 			transition: 0.20s;
 			background-color: rgba(0, 0, 0, 0.45);
@@ -46,12 +58,21 @@
 			background-color: rgba(0, 0, 0, 0.65);
 			color: #FFFFFF;
 		}
+		.direction-buttons {
+			height: 25px;
+			width: 25px;
+			float: right;
+		}
 	</style>
-	<div style="display:flex; resize:both;">
-		<div class="popout-list" id="plist-container">
+	<div id="main-container">
+		<div id="plist-container">
 			<table id="players-table">
 				<tr>
-					<th colspan="2">Players</th>
+					<th colspan="2">
+						Players
+						<button class="buttons direction-buttons" ng-click="plSwapHorizontal()">🡘</button>
+						<button class="buttons direction-buttons" ng-click="plSwapVertical()">🡙</button>
+					</th>
 				</tr>
 				<tr>
 					<td>No players.. something is wrong</td>
