Bug fixes bug fixes bug fixes
Bug fixes bug fixes bug fixes

--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -3,8 +3,8 @@
   <md-subheader class="md-no-sticky">General</md-subheader>
 
   <md-list-item md-no-ink>
-    <p>{{:: 'ui.options.multiplayer.syncConfigUpdates' | translate }}</p>
-    <md-checkbox ng-model="options.data.values.showSyncConfigUpdates" ng-change="options.applyState()"></md-checkbox>
+    <p>{{:: 'ui.options.multiplayer.disableSyncConfigUpdates' | translate }}</p>
+    <md-checkbox ng-model="options.data.values.disableSyncConfigUpdates" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 
   <md-list-item md-no-ink>
