recents working, player distance uses freecam if possible
recents, small css change, showNicknames now hideNicknames

--- a/ui/modules/multiplayer/favorites.partial.html
+++ b/ui/modules/multiplayer/favorites.partial.html
@@ -12,7 +12,7 @@
 	<div layout="row" layout-padding="">
 			<input type="text" id="search" name="search" placeholder="Search" oninput="displayServers()"/>
 			<md-button id="refresh-button" class="button" ng-class="" ng-click="multiplayer.refreshList()">{{:: 'ui.multiplayer.refresh' | translate}}</md-button>
-			<md-button id="addserver-button" class="button" ng-class="" style="margin-left:15px" ng-click="multiplayer.showCustomServer()">{{:: 'ui.multiplayer.addCustomServer' | translate}}</md-button>
+			<md-button id="addserver-button" class="button" ng-class="" ng-click="multiplayer.showCustomServer()">{{:: 'ui.multiplayer.addCustomServer' | translate}}</md-button>
 
 			<md-checkbox ng-model="multiplayermenu.check_isEmpty" ng-change="multiplayermenu.displayServers();">
 			<md-tooltip md-direction="right">
