--- a/ui/modules/multiplayer/recent.partial.html
+++ b/ui/modules/multiplayer/recent.partial.html
@@ -12,6 +12,7 @@
 	<div layout="row" layout-padding="">
 			<input type="text" id="search" name="search" placeholder="Search" oninput="displayRecentServers()"/>
 			<md-button id="refresh-button" class="button" ng-class="" ng-click="multiplayer.refreshList()">{{:: 'ui.multiplayer.refresh' | translate}}</md-button>
+			<md-button id="clear-button" class="button" ng-class="" ng-click="multiplayer.clearRecents()">Clear recents</md-button>
 
 		<md-divider></md-divider>
 	</div>
