--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -20,7 +20,7 @@
 
   <md-list-item md-no-ink>
     <p>{{:: 'ui.options.multiplayer.nameTags' | translate }}</p>
-    <md-checkbox ng-model="options.data.values.showNameTags" ng-change="options.applyState()"></md-checkbox>
+    <md-checkbox ng-model="options.data.values.hideNameTags" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 <!--<md-list-item md-no-ink>
     <p>{{:: 'ui.options.multiplayer.nameTagAlternate' | translate }}</p>
