--- a/ui/modules/multiplayer/direct.partial.html
+++ b/ui/modules/multiplayer/direct.partial.html
@@ -6,7 +6,7 @@
 		<br />
 		<div layout="row">
 			<input type="text" id="directip" name="ip" placeholder="Server IP" value="127.0.0.1"/>
-			<md-button id="direct-connect-button" class="button" ng-class="" ng-click="multiplayer.pasteClipboardToDirectIP()">Paste from Clipboard</md-button>
+			<md-button class="button" ng-class="" ng-click="multiplayer.pasteClipboardToDirectIP()">Paste from Clipboard</md-button>
 		</div>
 		<input type="text" id="directport" name="port" placeholder="Server Port" value="30814"/>
 		<!--<input type="text" id="nickname" name="nickname" placeholder="Nickname"/>-->
