--- a/ui/modules/vehicleconfig/partial.tuning.html
+++ b/ui/modules/vehicleconfig/partial.tuning.html
@@ -40,7 +40,7 @@
 
     <md-button ng-click="vehConf_tuning.write()" ng-disabled="vehConf_tuning.liveVariablesUpdate"
                class="md-raised md-success" md-no-ink >
-      {{ :: 'ui.common.apply' | translate}} & {{ :: 'ui.common.sync' | translate}}
+      {{ :: 'ui.common.apply' | translate}}<span ng-hide="!vehConf_tuning.isMPSession"> & {{ :: 'ui.common.sync' | translate}}</span>
     </md-button>
   </div>
 </md-content>
