--- a/ui/modules/vehicleselect/vehicleselect.html
+++ b/ui/modules/vehicleselect/vehicleselect.html
@@ -7,7 +7,8 @@
         <md-icon class="material-icons">arrow_back</md-icon>
       </md-button>
       <div style="margin: 8px">Vehicles</div>
-      <div flex layout="row" layout-align="center center" layout-wrap>
+	  <div ng-if="!vehicles.isMPSession && !vehicles.isNotMPSession" flex layout="row" layout-align="center center" layout-wrap> </div>
+      <div ng-if="vehicles.isMPSession" flex layout="row" layout-align="center center" layout-wrap>
 
         <md-button class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.cloneCurrentVehicle()">
           <md-icon class="material-icons"  style="color:black;font:bold;">content_copy</md-icon>
@@ -17,6 +18,35 @@
           <md-icon class="material-icons"  style="color:black;font:bold;">delete</md-icon>
           {{ ::'ui.options.gameplay.removeCurrentVehicle' | translate }}
         </md-button>
+      </div>
+
+      <div ng-if="vehicles.isNotMPSession" flex layout="row" layout-align="left center" style="margin-left: 24px; overflow:auto;">
+
+        <md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.saveDefault()">
+          <md-icon class="material-icons"  style="color:black;;">sd_storage</md-icon>
+          {{ ::'ui.options.gameplay.defaultToCurrentVehicle' | translate }}
+        </md-button>
+        <md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.loadDefault()">
+          <md-icon class="material-icons"  style="color:black;;">folder_open</md-icon>
+          {{ ::'ui.options.gameplay.loadDefaultVehicle' | translate }}
+        </md-button>
+        <md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.cloneCurrentVehicle()">
+          <md-icon class="material-icons"  style="color:black;;">content_copy</md-icon>
+          {{ ::'ui.options.gameplay.cloneCurrentVehicle' | translate }}
+        </md-button>
+        <md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeCurrentVehicle()">
+          <md-icon class="material-icons"  style="color:black;;">delete</md-icon>
+          {{ ::'ui.options.gameplay.removeCurrentVehicle' | translate }}
+        </md-button>
+        <!--<md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeAllVehicles()">
+          <md-icon class="material-icons"  style="color:black;;">delete_sweep</md-icon>
+          Remove all
+        </md-button>-->
+        <md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeAllExceptCurrentVehicle()">
+          <md-icon class="material-icons"  style="color:black;;">delete_sweep</md-icon>
+          {{ ::'ui.options.gameplay.removeOtherVehicles' | translate }}
+        </md-button>
+
       </div>
 
       <md-checkbox layout="row" layout-align="center center" md-no-ink ng-model="vehicles.showFiltersBar">{{"ui.options.gameplay.showFilters" | translate}}</md-checkbox>
