enabled logout button (not tested)

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -93,10 +93,10 @@
 	    
 	    <div flex="" style="max-height: none;"></div>
 	    
-         <!--<md-button id="direct-connect-btn" ng-click="multiplayer.logout()" class="md-raised md-accent" style="text-align:left;">
+        <md-button id="direct-connect-btn" ng-click="multiplayer.logout()" class="md-raised md-accent" style="text-align:left;">
           <md-icon class="material-icons">exit_to_app</md-icon>
 				  Logout
-        </md-button>-->
+        </md-button>
       </md-content>
 
       <div flex style="position: relative;">
