--- a/ui/modules/apps/BeamMP-Session/app.html
+++ b/ui/modules/apps/BeamMP-Session/app.html
@@ -7,7 +7,6 @@
 	#quit-button {
 		width: 55px;
 		height: 100%;
-		border: 2px solid rgba(175, 175, 175, 0.45);
 	}
 	.outerDiv {
 		display: flex;
@@ -39,7 +38,7 @@
 	}
 	.buttons {
 		color: #DDDDDD;
-		border: 2px solid rgba(175, 175, 175, 0.45);
+		border: none;
 		transition: 0.20s;
 		background-color: rgba(0, 0, 0, 0.45);
 		height: 100%;
