queue system and reworked 'dont tab to others vehicles'

--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -3,8 +3,9 @@
   <md-subheader class="md-no-sticky">General</md-subheader>
 
   <md-list-item md-no-ink>
-    <p>{{:: 'ui.options.multiplayer.disableSyncConfigUpdates' | translate }}</p>
-    <md-checkbox ng-model="options.data.values.disableSyncConfigUpdates" ng-change="options.applyState()"></md-checkbox>
+    <p>Queue player updates</p>    
+	<md-tooltip md-direction="right">If enabled, you will only spawn vehicles once slowed down, as to not affect gameplay</md-tooltip>
+    <md-checkbox ng-model="options.data.values.queueSpawnEdit" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 
   <md-list-item md-no-ink>
