added strings to locale

--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -3,8 +3,8 @@
   <md-subheader class="md-no-sticky">General</md-subheader>
 
   <md-list-item md-no-ink>
-    <p>Queue player updates</p>    
-    <md-tooltip md-direction="right">If enabled, you will only spawn vehicles once slowed down, as to not affect gameplay</md-tooltip>
+    <p>{{:: 'ui.options.multiplayer.queueSpawnEdit' | translate }}</p>
+    <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.queueSpawnEdit.tooltip' | translate }}</md-tooltip>
     <md-checkbox ng-model="options.data.values.queueSpawnEdit" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 
@@ -20,8 +20,8 @@
   </md-list-item>
 
   <md-list-item md-no-ink>
-    <p>Enable optimisations</p>
-    <md-tooltip md-direction="right">If enabled, other vehicles will run limited calculations</md-tooltip>
+    <p>{{:: 'ui.options.multiplayer.luaOptimisations' | translate }}</p>
+    <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.luaOptimisations.tooltip' | translate }}</md-tooltip>
     <md-checkbox ng-model="options.data.values.luaOptimisations" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 
