queue system more customizable, reliable
added option to manually sync instead of relying on the automatic only

--- a/ui/modules/apps/BeamMP-Session/app.html
+++ b/ui/modules/apps/BeamMP-Session/app.html
@@ -58,8 +58,8 @@
 		<div class="block others-block">
 			<span>Ping: <span id="Session-Ping">?</span></span>
 		</div>
-		<div class="block others-block" id="queue-block" style="display: none;">
-			<span>Events queued: <span id="Session-Queue" title="">0</span></span>
+		<div class="block others-block" id="queue-block" style="displayy: none;">
+			<span ng-click="applyQueue()">Events queued: <span id="Session-Queue" title="">0</span></span>
 		</div>
 		<div>
 			<button type="button" id="quit-button" name="button" class="buttons" ng-click="mpquit()">Quit</button>
