Added rules and tos acceptance
Added rules and tos acceptance

--- a/ui/entrypoints/main/index.html
+++ b/ui/entrypoints/main/index.html
@@ -64,6 +64,7 @@
     <script src="modules/debug/debug.js"></script>
     <script src="modules/credits/credits.js"></script>
 	<script src="modules/multiplayer/multiplayer.js"></script> <!-- --------------------------------- BEAMMP --------------------------------- -->
+	<script src="modules/multiplayerTOS/tos.js"></script> <!-- --------------------------------- BEAMMP --------------------------------- -->
     <script src="modules/startScreen/startScreen.js"></script>
     <script src="modules/vehicleconfig/vehicleconfig.js"></script>
     <script src="modules/loading/loading.js"></script>
