--- a/ui/modules/apps/BeamMP-Chat/app.html
+++ b/ui/modules/apps/BeamMP-Chat/app.html
@@ -21,6 +21,7 @@
 		}
 		#chat-input::placeholder {
 			color: #DDDDDD;
+			padding-left: 5px;
 		}
 		#chat-input:hover {
 			background-color:rgba(0, 0, 0, 0.5);
@@ -73,7 +74,7 @@
 		<ul id="chat-list"></ul>
 		<form id="chatbox">
 			<button id="send-button" class="buttons" ng-click="chatSend()">Send</button>
-			<input id="chat-input" type="text" ng-click="select()" placeholder=" Chat here"></input>
+			<input id="chat-input" type="text" ng-click="select()" placeholder="Chat here"></input>
 			<button id="swap-button" class="buttons swap-buttons" ng-click="chatSwapHorizontal()">🡘</button>
 			<button id="swap-button" class="buttons swap-buttons" ng-click="chatSwapVertical()">🡙</button>
 		</form>
