ToS has clickable links, server browser no longer borked

--- a/ui/modules/help/faq.html
+++ b/ui/modules/help/faq.html
@@ -40,7 +40,7 @@
     <div class="md-padding">
       If you are experiencing problems with the multiplayer mod, you can get in touch with us in these ways
       <br><br>
-      <a href="http-external://forum.beamng-mp.com/" onclick="openForumLink()">BeamMP Forum</a>
+      <a href="http-external://forum.beammp.com/" onclick="openForumLink()">BeamMP Forum</a>
       <a href="http-external://discord.gg/beammp/" onclick="openExternalLink('https://discord.gg/beammp')">Discord Support</a>
       <br>
       We will try to get back to you as soon as possible, but please allow up to 48 hours
