Fixed duplicate IDs
Fixed duplicate IDs

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -68,12 +68,12 @@
 		      {{:: 'ui.multiplayer.servers' | translate}}
         </md-button>
 
-        <md-button id="servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.recent') !== -1)}" ui-sref="menu.multiplayer.recent" style="text-align:left;">
+        <md-button id="recent-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.recent') !== -1)}" ui-sref="menu.multiplayer.recent" style="text-align:left;">
           <md-icon class="material-icons">alarm</md-icon>
 				  {{:: 'ui.multiplayer.recent' | translate}}
         </md-button>
 
-        <md-button id="servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.favorites') !== -1)}" ui-sref="menu.multiplayer.favorites" style="text-align:left;">
+        <md-button id="favorites-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.favorites') !== -1)}" ui-sref="menu.multiplayer.favorites" style="text-align:left;">
           <md-icon class="material-icons">star</md-icon>
 				  {{:: 'ui.multiplayer.favorites' | translate}}
         </md-button>
@@ -83,7 +83,7 @@
 				  {{:: 'ui.multiplayer.direct_connect' | translate}}
         </md-button>
 
-        <md-button id="direct-connect-btn" onclick="openForumLink()" ng-class="" style="text-align:left;">
+        <md-button id="forum-btn" onclick="openForumLink()" ng-class="" style="text-align:left;">
           <md-icon class="material-icons">web</md-icon>
 				  {{:: 'ui.multiplayer.forum' | translate}}
         </md-button>
