--- a/ui/modules/multiplayer/recent.partial.html
+++ b/ui/modules/multiplayer/recent.partial.html
@@ -20,11 +20,11 @@
 	<table id="serversTable">
 		<thead>
 			<tr id="header">
-				<th>{{:: 'ui.multiplayer.location' | translate}}</th>
-				<th>{{:: 'ui.multiplayer.description' | translate}}</th>
-				<th>{{:: 'ui.multiplayer.map' | translate}}</th>
-				<th>{{:: 'ui.multiplayer.players' | translate}}</th>
-				<th>PPS</th>
+				<th onclick="sortTable('location', false)">{{:: 'ui.multiplayer.location' | translate}}</th>
+				<th onclick="sortTable('sname', false)">{{:: 'ui.multiplayer.description' | translate}}</th>
+				<th onclick="sortTable('map', false)">{{:: 'ui.multiplayer.map' | translate}}</th>
+				<th onclick="sortTable('players', true)">{{:: 'ui.multiplayer.players' | translate}}</th>
+				<th onclick="sortTable('pps', true)">PPS</th>
 			</tr>
 		</thead>
 		<tbody id="serversTableBody">
