--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -65,11 +65,11 @@
 	<table id="serversTable">
 		<thead>
 			<tr id="header">
-				<th sort-type="location" onclick="sortTable(0)">{{:: 'ui.multiplayer.location' | translate}}</th>
-				<th sort-type="sname" onclick="sortTable(1)">{{:: 'ui.multiplayer.description' | translate}}</th>
-				<th sort-type="map" onclick="sortTable(2)">{{:: 'ui.multiplayer.map' | translate}}</th>
-				<th sort-type="players" sort-number="true" onclick="sortTable(3)">{{:: 'ui.multiplayer.players' | translate}}</th>
-				<th sort-type="pps" sort-number="true" onclick="sortTable(4)">PPS</th>
+				<th onclick="sortTable('location', false)">{{:: 'ui.multiplayer.location' | translate}}</th>
+				<th onclick="sortTable('sname', false)">{{:: 'ui.multiplayer.description' | translate}}</th>
+				<th onclick="sortTable('map', false)">{{:: 'ui.multiplayer.map' | translate}}</th>
+				<th onclick="sortTable('players', true)">{{:: 'ui.multiplayer.players' | translate}}</th>
+				<th onclick="sortTable('pps', true)">PPS</th>
 			</tr>
 		</thead>
 		<tbody id="serversTableBody">
