--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -2,6 +2,7 @@
 
 <div id="LoadingServer" style="display: none;">
     <div id="LoadingBody">
+		<md-button style="right:0; top:0; margin:0;" class="button close-button" ng-class="" ng-click="multiplayer.closePopup()"> X </md-button>
         <h1>{{:: 'ui.multiplayer.connecting' | translate}}</h1>
         <span id="LoadingStatus">{{:: 'ui.multiplayer.loading' | translate}}</span>
     </div>
@@ -37,17 +38,15 @@
 </div>
 
 <div id="addCustomFav" style="display: none;">
-
-	<md-list-item layout class="md-padding" style="padding-top: 15px; padding-bottom: 0;">
+	<md-button style="right:0; top:0; margin:0;" class="button close-button" ng-class="" ng-click="multiplayer.closePopup()"> X </md-button>
+	<md-list-item layout class="md-padding">
 		<h1>Add custom server :</h1>
-		<md-button id="" class="button close-button" ng-class="" ng-click="multiplayer.closePopup()"> X </md-button>
 	</md-list-item>
-
 	<center>
 		<input type="text" id="customFavName" name="customFavName" placeholder="Custom server"/>
 		<input type="text" id="customFavIP" name="customFavIP" placeholder="Server IP"/>
 		<input type="text" id="customFavPort" name="customFavPort" placeholder="Server port" value="30814"/>
-		<md-button id="" class="button" ng-click="multiplayer.addCustomServer()">Save</md-button>
+		<md-button class="button" ng-click="multiplayer.addCustomServer()">Save</md-button>
 	</center>
 </div>
 
