--- a/ui/modules/apps/BeamMP-PlayerList/app.html
+++ b/ui/modules/apps/BeamMP-PlayerList/app.html
@@ -1,45 +1,84 @@
-<div ng-controller="PlayerList" id="PlayerList" class="multiplayerPlayerList" ng-init="init()" ng-style="background-color: rgba(0, 0, 0, 0)">
+<div ng-controller="PlayerList" id="PlayerList" class="multiplayerPlayerList" ng-init="init()" ng-style="{'background-color': 'rgba(0, 0, 0, 0)', 'height': '100%'}">
 	<style>
-		.popout-list {
-			display: none;
-			margin-right: 25px;
-			background-color: rgba(0, 0, 0, 0.5);
-			width:100%;
-			resize:both;
+		#main-container {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-end;
+			align-content: flex-end;
+			height: 100%;
 		}
-		.plist-show-button {
-			color: white;
+		#plist-container {
+			display: none;
+			transition: 0.20s;
+			width: 100%;
+			margin: 0;
+			padding: 0;
+		}
+		#show-button {
 			font-weight: bold;
-			border: 0px;
 			width: 25px;
-			height: 160px;
-			position: absolute;
-			right: 0;
-			background-color: rgba(0, 0, 0, 0.5)
+			height: 75px;
+			border: 2px solid rgba(175, 175, 175, 0.45);
+			padding: 0;
+			margin: 0;
 		}
 		.tp-button {
-			color: white;
-			border: 0px;
-			width: 40px;
-			height: 24px;
-			//position: absolute;
-			//right: 0;
-			background-color: rgba(0, 0, 0, 0.5)
+			width: 50px;
+			min-height: 27px;
 		}
-		.multiplayerPlayerList {
+		#players-table {
 			color: white;
-			box-sizing: border-box;
-			padding:2px;
-			background-color: rgba(0, 0, 0, 0)
+			border: none;
+			border-collapse: collapse;
+			width: 100%;
+			padding-bottom: -4px;
+			background-color: rgba(0, 0, 0, 0.25);
+			border: 2px solid rgba(175, 175, 175, 0.45);
+		}
+		#players-table td {
+			padding: 0 0 0 5px;
+			max-width: 100%;
+			max-width: 0;
+			overflow: hidden;
+		}
+		#players-table th {
+			border-bottom: 2px solid rgba(175, 175, 175, 0.45);
+			margin: 0;
+			padding: 0;
+		}
+		.buttons {
+			color: #DDDDDD;
+			transition: 0.20s;
+			background-color: rgba(0, 0, 0, 0.45);
+			height:100%;
+			border: none;
+			margin: 0px 0 0 0;
+		}
+		.buttons:hover {
+			background-color: rgba(0, 0, 0, 0.65);
+			color: #FFFFFF;
+		}
+		.direction-buttons {
+			height: 25px;
+			width: 25px;
+			float: right;
 		}
 	</style>
-	<div style="display:flex; resize:both;">
-		<div class="popout-list" id="plist-container">
-			<table id="playerstable" border="1" style="border-collapse: collapse; width:100%;">
-				<tr><th colspan="2">Players</th></tr>
-				<tr><td>No players.. something is wrong</td><td width="30px"><button class="tp-button" onclick="teleportToPlayer('meow')">TP</button></td></tr>
+	<div id="main-container">
+		<div id="plist-container">
+			<table id="players-table">
+				<tr>
+					<th colspan="2">
+						Players
+						<button class="buttons direction-buttons" ng-click="plSwapHorizontal()">🡘</button>
+						<button class="buttons direction-buttons" ng-click="plSwapVertical()">🡙</button>
+					</th>
+				</tr>
+				<tr>
+					<td>No players.. something is wrong</td>
+				</tr>
 			</table>
 		</div>
-		<button class="plist-show-button" id="plist-show-button" onclick="toggleList()">P l a y e r s</button>
+		<button class="buttons" id="show-button" onclick="toggleList()">&lt;</button>
 	</div>
 </div>
