Fixes and improvements
- Fixed servers not showing when favorites.json is missing
- Improved map loading logic
- If the map is missing from the game a message is shown to the user
- Slightly improved the UI

--- a/ui/modules/multiplayer/favorites.partial.html
+++ b/ui/modules/multiplayer/favorites.partial.html
@@ -35,7 +35,7 @@
 			Not full
 			</md-checkbox>
 
-			<md-select ng-model="multiplayermenu.selectMap" placeholder="All" class="md-no-underline dropdown" ng-change="multiplayermenu.repopulate();" style="height: 40px; background: unset;">
+			<md-select id="map-select" ng-model="multiplayermenu.selectMap" placeholder="All" class="md-no-underline dropdown" ng-change="multiplayermenu.repopulate();">
 				<md-tooltip md-direction="right">
 					{{:: 'ui.multiplayer.mapFilterTooltip' | translate}}
 				</md-tooltip md-no-ink>
