--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -15,6 +15,18 @@
   </md-list-item>
 
   <md-list-item md-no-ink>
+    <p><span style="color: coral; font-weight: bold;">EXPERIMENTAL</span> {{:: 'ui.options.multiplayer.queueAutoSkipRemote' | translate }}</p>
+    <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.queueAutoSkipRemote.tooltip' | translate }}</md-tooltip>
+    <md-checkbox ng-model="options.data.values.queueAutoSkipRemote" ng-change="options.applyState()"></md-checkbox>
+  </md-list-item>
+
+  <md-list-item md-no-ink>
+    <p><span style="color: coral; font-weight: bold;">EXPERIMENTAL</span> {{:: 'ui.options.multiplayer.luaOptimisations' | translate }}</p>
+    <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.luaOptimisations.tooltip' | translate }}</md-tooltip>
+    <md-checkbox ng-model="options.data.values.luaOptimisations" ng-change="options.applyState()"></md-checkbox>
+  </md-list-item>
+
+  <md-list-item md-no-ink>
     <p>{{:: 'ui.options.multiplayer.autoSyncVehicles' | translate }}</p>
     <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.autoSyncVehicles.tooltip' | translate }}</md-tooltip>
     <md-checkbox ng-model="options.data.values.autoSyncVehicles" ng-change="options.applyState()"></md-checkbox>
@@ -23,12 +35,6 @@
   <md-list-item md-no-ink>
     <p>{{:: 'ui.options.multiplayer.skipOtherPlayersVehicles' | translate }}</p>
     <md-checkbox ng-model="options.data.values.skipOtherPlayersVehicles" ng-change="options.applyState()"></md-checkbox>
-  </md-list-item>
-
-  <md-list-item md-no-ink>
-    <p>{{:: 'ui.options.multiplayer.luaOptimisations' | translate }}</p>
-    <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.luaOptimisations.tooltip' | translate }}</md-tooltip>
-    <md-checkbox ng-model="options.data.values.luaOptimisations" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 
   <md-list-item md-no-ink>
