VE related fixes

--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -23,11 +23,11 @@
   </div>
 
 
-  <md-list-item md-no-ink>
+  <!--<md-list-item md-no-ink>
     <p><span style="color: coral; font-weight: bold;">EXPERIMENTAL</span> {{:: 'ui.options.multiplayer.luaOptimisations' | translate }}</p>
     <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.luaOptimisations.tooltip' | translate }}</md-tooltip>
     <md-checkbox ng-model="options.data.values.luaOptimisations" ng-change="options.applyState()"></md-checkbox>
-  </md-list-item>
+  </md-list-item>-->
 
   <md-list-item md-no-ink>
     <p>{{:: 'ui.options.multiplayer.autoSyncVehicles' | translate }}</p>
