--- a/ui/modules/vehicleconfig/partial.parts.html
+++ b/ui/modules/vehicleconfig/partial.parts.html
@@ -124,14 +124,14 @@
           <md-button class="md-raised" md-no-ink ng-click="vehConf_parts.genLicensePlate()" type='button' aria-label="_"
             style="min-width: 20px;">
             <md-icon class="material-icons">cached</md-icon>
-            <md-tooltip md-direction="left">{{ ::'ui.vehicleconfig.licensePlateGen' | translate }}</md-tooltip>
+            <md-tooltip md-direction="top">{{ ::'ui.vehicleconfig.licensePlateGen' | translate }}</md-tooltip>
           </md-button>
         </md-input-container>
         <md-input-container>
           <md-button class="md-raised" md-no-ink ng-click="vehConf_parts.updateLicensePlate()" type='button'
             aria-label="_" style="min-width: 20px;">
             <md-icon class="material-icons">check</md-icon>
-            <md-tooltip md-direction="left">{{ ::'ui.vehicleconfig.updateLicensePlate' | translate }}</md-tooltip>
+            <md-tooltip md-direction="top">{{ ::'ui.vehicleconfig.updateLicensePlate' | translate }}</md-tooltip>
           </md-button>
         </md-input-container>
       </form>
