--- a/ui/modules/apps/BeamMP-Session/app.html
+++ b/ui/modules/apps/BeamMP-Session/app.html
@@ -58,8 +58,8 @@
 		<div class="block others-block">
 			<span>Ping: <span id="Session-Ping">?</span></span>
 		</div>
-		<div class="block others-block" id="queue-block" style="displayy: none;">
-			<span ng-click="applyQueue()">Events queued: <span id="Session-Queue" title="">0</span></span>
+		<div class="block others-block" id="queue-block" style="display: none; padding: 0px" >
+			<button class="buttons" style="background-color: rgba(255, 100, 0, 0.8)" ng-click="applyQueue()">Events queued: <span id="Session-Queue" title="">0</span></button>
 		</div>
 		<div>
 			<button type="button" id="quit-button" name="button" class="buttons" ng-click="mpquit()">Quit</button>
